--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,12 +1,12 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Georgia', 'Times New Roman', serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background: url('./farm-background.jpg') no-repeat center center fixed;
   background-size: cover;
+  background-color: #f8f4e6; /* fallback cream color */
+  color: #2d3436;
 }
 
 code {
